--- a/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/vars/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/vars/main.yaml
@@ -1,5 +1,22 @@
 ---
 
+fop_download_dir: "{{ lookup('env', 'HOME') }}/build/cuda_toolkit_deps/fop"
+fop_version: "2.3"
+
+xorg_macros_build_dir: "{{ lookup('env', 'HOME') }}/build/cuda_toolkit_deps/xorg-macros"
+xorg_macros_version: "util-macros-1.19.1"
+
+xmlto_build_dir: "{{ lookup('env', 'HOME') }}/build/cuda_toolkit_deps/xmlto"
+
+libXext_build_dir: "{{ lookup('env', 'HOME') }}/build/cuda_toolkit_deps/libXext"
+libXext_version: "1.3.4"
+
+xextproto_build_dir: "{{ lookup('env', 'HOME') }}/build/cuda_toolkit_deps/xextproto"
+xextproto_version: "7.3.0"
+
+libXt_build_dir: "{{ lookup('env', 'HOME') }}/build/cuda_toolkit_deps/libXt"
+libXt_version: "1.2.0"
+
 libXmu_build_dir: "{{ lookup('env', 'HOME') }}/build/cuda_toolkit_deps/libXmu"
 libXmu_version: "1.1.3"
 
