Fixing the step where fop is moved to /usr/bin. Was attempting to move a file that didn't exist.

--- a/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
@@ -179,7 +179,7 @@
 # Install fop by moving the binary to /usr/bin so it can be called later
 - name: Move fop binary to /usr/bin
   shell: |
-    cd '{{ fop_download_dir }}/fop'
+    cd '{{ fop_download_dir }}'
     mv fop /usr/bin
 
 # Set execute permissions for fop
