The 'fop' steps were referencing the wrong folder/subdirs. Fixing mistake.

--- a/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
@@ -179,7 +179,7 @@
 # Install fop by moving the binary to /usr/bin so it can be called later
 - name: Move fop binary to /usr/bin
   shell: |
-    cd '{{ fop_download_dir }}'
+    cd '{{ fop_download_dir }}/fop-{{ fop_version }}/fop'
     mv fop /usr/bin
 
 # Set execute permissions for fop
@@ -189,14 +189,14 @@
 # Move fop.jar to the 'ext' folder
 - name: Move fop.jar to JRE's lib/ext folder
   shell: |
-    cd '{{ fop_download_dir }}/fop/build'
+    cd '{{ fop_download_dir }}/fop-{{ fop_version }}/fop/build'
     cp fop.jar /usr/lib/jvm/jre/lib/ext
 
 # Move remaining .jar files to the 'ext' folder
 - name: Move remaining .jar file sto JRE's lib/ext folder
   shell: |
-    cd '{{ fop_download_dir }}/fop'
-    cp lib/*.jar /usr/lib/jvm/jre/lib/ext
+    cd '{{ fop_download_dir }}/fop-{{ fop_version }}/fop'
+    cp 'lib/*.jar' '/usr/lib/jvm/jre/lib/ext'
 
 # Generate 'configure' file for xmlto
 - name: Generate configure file for xmlto
