--- a/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
@@ -194,7 +194,7 @@
 # Move remaining .jar files to the 'ext' folder
 - name: Move remaining .jar file sto JRE's lib/ext folder
   shell: |
-    cp '{{ fop_download_dir }}/fop-{{ fop_version }}/fop/lib/*.jar' '/usr/lib/jvm/jre/lib/ext'
+    'cp {{ fop_download_dir }}/fop-{{ fop_version }}/fop/lib/*.jar /usr/lib/jvm/jre/lib/ext'
 
 # Generate 'configure' file for xmlto
 - name: Generate configure file for xmlto
