--- a/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
@@ -19,22 +19,26 @@
     name: ninja
 
 # Install XZ on RHEL 7 (for unarchiving mesa) and autoconf
-- name: Install XZ, autoconf, java on RHEL 7
+- name: Install XZ, autoconf, automake, java, libtool on RHEL 7
   yum:
     name:
       - autoconf
+      - automake
       - java-1.8.0-openjdk
       - java-1.8.0-openjdk-devel
+      - libtool
       - xz
   when: rhel_version == '7'
 
 # Install XZ on RHEL 8 (for unarchiving mesa) and autoconf
-- name: Install XZ, autoconf, java on RHEL 8
+- name: Install XZ, autoconf, automake, java, libtool on RHEL 8
   dnf:
     name:
       - autoconf
+      - automake
       - java-1.8.0-openjdk
       - java-1.8.0-openjdk-devel
+      - libtool
       - xz
   when: rhel_version == '8'
 
