Adding 'gettext' to the yum/dnf package installation so that autoreconf can run.

--- a/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
@@ -19,11 +19,12 @@
     name: ninja
 
 # Install XZ on RHEL 7 (for unarchiving mesa) and autoconf
-- name: Install XZ, autoconf, automake, java, libtool on RHEL 7
+- name: Install XZ, autoconf, automake, gettext, java, libtool on RHEL 7
   yum:
     name:
       - autoconf
       - automake
+      - gettext
       - java-1.8.0-openjdk
       - java-1.8.0-openjdk-devel
       - libtool
@@ -31,11 +32,12 @@
   when: rhel_version == '7'
 
 # Install XZ on RHEL 8 (for unarchiving mesa) and autoconf
-- name: Install XZ, autoconf, automake, java, libtool on RHEL 8
+- name: Install XZ, autoconf, automake, gettext, java, libtool on RHEL 8
   dnf:
     name:
       - autoconf
       - automake
+      - gettext
       - java-1.8.0-openjdk
       - java-1.8.0-openjdk-devel
       - libtool
