--- a/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
@@ -187,7 +187,7 @@
     dest: '{{ xkbcommon_build_dir }}'
 
 # Get flex
-- name: Get flex from git. (NOTE: The repo itself is not cloned because the tar file contains pregenerated files necessary for building flex.)
+- name: Get flex from git. (NOTE --> The repo itself is not cloned because the tar file contains pregenerated files necessary for building flex.)
   unarchive:
     src: 'https://github.com/westes/flex/releases/download/v{{ flex_version }}/flex-{{ flex_version }}.tar.gz'
     dest: '{{ flex_build_dir }}'
