Ansible role references 'gettext_build_dir', not 'gettext'.

--- a/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/vars/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/vars/main.yaml
@@ -3,7 +3,7 @@
 fop_download_dir: "{{ lookup('env', 'HOME') }}/build/cuda_toolkit_deps/fop"
 fop_version: "2.3"
 
-gettext: "{{ lookup('env', 'HOME') }}/build/cuda_toolkit_deps/gettext"
+gettext_build_dir: "{{ lookup('env', 'HOME') }}/build/cuda_toolkit_deps/gettext"
 gettext_version: "0.20"
 
 flex_build_dir: "{{ lookup('env', 'HOME') }}/build/cuda_toolkit_deps/flex"
