--- a/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
+++ b/TensorFlow/playbooks/cuda_optional_installation/roles/install_cuda_toolkit_deps/tasks/main.yaml
@@ -18,49 +18,78 @@
     executable: pip3
     name: ninja
 
+# Install mako
+- name: Install mako with pip3
+  pip:
+    executable: pip3
+    name: mako
+
 # Install XZ on RHEL 7 (for unarchiving mesa) and autoconf
-- name: Install autoconf, automake, java, libtool, libxslt, libxslt-devel, unzip, xz on RHEL 7
+- name: Install autoconf, automake, bzip2-devel, expat-devel, java, libX11-xcb, libtool, libxcb-devel, libxslt, libxslt-devel, openssl-devel, unzip, xorg-x11-proto-devel, xz on RHEL 7
   yum:
     name:
       - autoconf
       - automake
+      - bzip2-devel
+      - expat-devel
       - java-1.8.0-openjdk
       - java-1.8.0-openjdk-devel
+      - libX11-xcb
       - libtool
+      - libxcb-devel
       - libxslt
       - libxslt-devel
+      - openssl-devel
       - unzip
+      - xorg-x11-proto-devel
       - xz
   when: rhel_version == '7'
 
 # Install XZ on RHEL 8 (for unarchiving mesa) and autoconf
-- name: Install autoconf, automake, java, libtool, libxslt, libxslt-devel, unzip, xz on RHEL 8
+- name: Install autoconf, automake, bzip2-devel, expat-devel, java, libX11-xcb, libtool, libxcb-devel, libxslt, libxslt-devel, openssl-devel unzip, xorg-x11-proto-devel, xz on RHEL 8
   dnf:
     name:
       - autoconf
       - automake
+      - bzip2-devel
+      - expat-devel
       - java-1.8.0-openjdk
       - java-1.8.0-openjdk-devel
+      - libX11-xcb
       - libtool
+      - libxcb-devel
       - libxslt
       - libxslt-devel
+      - openssl-devel
       - unzip
+      - xorg-x11-proto-devel
       - xz
   when: rhel_version == '8'
 
 # Remove existing build dirs
-- name: Remove existing build dirs for fop, gettext, flex, xorg-macros, xmlto, libXext, xextproto, libXt, libXmu, libXi, libX11, libXrandr, freeglut, mesa, xkbcommon
+- name: Remove existing build dirs for fop, gettext, pixman, libpciaccess, drm, xtrans, flex, xorg-macros, xmlto, libXext, xextproto, libXfixes, xdamage, libxshmfence, libXxf86vm, mcpp, lmdb, ice, libXt, libXmu, libXi, libX11, libXrandr, freeglut, mesa, xkbcommon
   file:
     state: absent
     path: '{{ item }}'
   with_items: 
     - '{{ fop_download_dir }}'
     - '{{ gettext_build_dir }}'
+    - '{{ pixman_build_dir }}'
+    - '{{ libpciaccess_build_dir }}'
+    - '{{ drm_build_dir }}'
+    - '{{ xtrans_build_dir }}'
     - '{{ flex_build_dir }}'
     - '{{ xorg_macros_build_dir }}'
     - '{{ xmlto_build_dir }}'
     - '{{ libXext_build_dir }}'
     - '{{ xextproto_build_dir }}'
+    - '{{ libXfixes_build_dir }}'
+    - '{{ xdamage_build_dir }}'
+    - '{{ libxshmfence_build_dir }}'
+    - '{{ mcpp_build_dir }}'
+    - '{{ lmdb_build_dir }}'
+    - '{{ ice_build_dir }}'
+    - '{{ libXxf86vm_build_dir }}'
     - '{{ libXt_build_dir }}'
     - '{{ libXmu_build_dir }}'
     - '{{ libX11_build_dir }}'
@@ -71,18 +100,29 @@
     - '{{ xkbcommon_build_dir }}'
 
 # Create build directory for each lib
-- name: Create build dirs for fop, flex, gettext, xorg-macros, xmlto, libXext, xextproto, libXt, libXmu, libXi, libX11, libXrandr, freeglut, mesa, xkbcommon
+- name: Create build dirs for fop, gettext, pixman, libpciaccess, drm, xtrans, flex, xorg-macros, xmlto, libXext, xextproto, libXfixes, xdamage, libxshmfence, libXxf86vm, mcpp, lmdb, ice, libXt, libXmu, libXi, libX11, libXrandr, freeglut, mesa, xkbcommon
   file:
     state: directory
     path: '{{ item }}'
   with_items: 
     - '{{ fop_download_dir }}'
     - '{{ gettext_build_dir }}'
+    - '{{ pixman_build_dir }}'
+    - '{{ libpciaccess_build_dir }}'
+    - '{{ drm_build_dir }}'
+    - '{{ xtrans_build_dir }}'
     - '{{ flex_build_dir }}'
     - '{{ xorg_macros_build_dir }}'
     - '{{ xmlto_build_dir }}'
     - '{{ libXext_build_dir }}'
     - '{{ xextproto_build_dir }}'
+    - '{{ libXfixes_build_dir }}'
+    - '{{ xdamage_build_dir }}'
+    - '{{ libxshmfence_build_dir }}'
+    - '{{ libXxf86vm_build_dir }}'
+    - '{{ mcpp_build_dir }}'
+    - '{{ lmdb_build_dir }}'
+    - '{{ ice_build_dir }}'
     - '{{ libXt_build_dir }}'
     - '{{ libXmu_build_dir }}'
     - '{{ libX11_build_dir }}'
@@ -107,6 +147,20 @@
     remote_src: yes
     extra_opts: [--strip-components=1]
 
+# Get pixman
+- name: Get pixman from freedesktop.org
+  git:
+    repo: https://gitlab.freedesktop.org/pixman/pixman.git
+    dest: '{{ pixman_build_dir }}'
+    version: '{{ pixman_version }}'
+
+# Get drm
+- name: Get drm from freedesktop.org
+  git:
+    repo: https://gitlab.freedesktop.org/mesa/drm.git
+    version: '{{ drm_version }}'
+    dest: '{{ drm_build_dir }}'
+
 # Get xorg-macros
 - name: Get xorg-macros from freedesktop.org
   git:
@@ -120,6 +174,22 @@
     repo: https://pagure.io/xmlto.git
     dest: '{{ xmlto_build_dir }}'
 
+# Get libpciaccess
+- name: Get libpciaccess from X.org
+  unarchive:
+    src: 'https://www.x.org/releases/individual/lib/libpciaccess-{{ libpciaccess_version }}.tar.gz'
+    dest: '{{ libpciaccess_build_dir }}'
+    remote_src: yes
+    extra_opts: [--strip-components=1]
+
+# Get xtrans
+- name: Get xtrans from X.org
+  unarchive:
+    src: 'https://www.x.org/releases/individual/lib/xtrans-{{ xtrans_version }}.tar.gz'
+    dest: '{{ xtrans_build_dir }}'
+    remote_src: yes
+    extra_opts: [--strip-components=1]
+
 # Get libXext
 - name: Get libXext from X.org
   unarchive:
@@ -131,8 +201,32 @@
 # Get xextproto
 - name: Get xextproto from X.org
   unarchive:
-    src: "https://www.x.org/releases/individual/proto/xextproto-{{ xextproto_version }}.tar.gz"
+    src: 'https://www.x.org/releases/individual/proto/xextproto-{{ xextproto_version }}.tar.gz'
     dest: '{{ xextproto_build_dir }}'
+    remote_src: yes
+    extra_opts: [--strip-components=1]
+
+# Get xfixes
+- name: Get libXfixes from X.org
+  unarchive:
+    src: 'https://www.x.org/releases/individual/lib/libXfixes-{{ libXfixes_version }}.tar.gz'
+    dest: '{{ libXfixes_build_dir }}'
+    remote_src: yes
+    extra_opts: [--strip-components=1]
+
+# Get libxdamage
+- name: Get libxdamage from X.org
+  unarchive:
+    src: 'https://www.x.org/releases/individual/lib/libXdamage-{{ xdamage_version }}.tar.gz'
+    dest: '{{ xdamage_build_dir }}'
+    remote_src: yes
+    extra_opts: [--strip-components=1]
+
+# Get libXxf86vm
+- name: Get libXxf86vm from X.org
+  unarchive:
+    src: 'https://www.x.org/releases/individual/lib/libXxf86vm-{{ libXxf86vm_version }}.tar.gz'
+    dest: '{{ libXxf86vm_build_dir }}'
     remote_src: yes
     extra_opts: [--strip-components=1]
 
@@ -190,6 +284,27 @@
     dest: '{{ mesa_build_dir }}'
     remote_src: yes
     extra_opts: [--strip-components=1]
+
+# Get mcpp
+- name: Get mcpp from git
+  git:
+    repo: https://github.com/zeroc-ice/mcpp.git
+    dest: '{{ mcpp_build_dir }}'
+    version: '{{ mcpp_version }}'
+
+# Get LMDB
+- name: Get LMDB
+  git:
+    repo: https://github.com/LMDB/lmdb.git
+    dest: '{{ lmdb_build_dir }}'
+    version: '{{ lmdb_version }}'
+
+# Get ice
+- name: Get ice from git
+  git:
+    repo: https://github.com/zeroc-ice/ice.git 
+    dest: '{{ ice_build_dir }}'
+    version: '{{ ice_version }}'
 
 # Get xkbcommon
 - name: Get xkbcommon from git
@@ -257,6 +372,12 @@
     cd '{{ flex_build_dir }}'
     autoreconf -i
 
+# Configure flex
+- name: Configure flex. Set HELP2MAN equal to a dummy value to skip the help2man part of the build process.
+  shell: |
+    cd '{{ flex_build_dir }}'
+    HELP2MAN=/tools/bin/true ./configure
+
 # Patch flex
 - name: Patch flex so that reallocarray can be found
   lineinfile:
@@ -264,12 +385,6 @@
     line: '#include <malloc.h>'
     create: yes
     insertafter: '#include <math.h>'
-
-# Configure flex
-- name: Configure flex. Set HELP2MAN equal to a dummy value to skip the help2man part of the build process.
-  shell: |
-    cd '{{ flex_build_dir }}'
-    HELP2MAN=/tools/bin/true ./configure
 
 # Build flex
 - name: Make flex
@@ -321,11 +436,81 @@
     chdir: '{{ xmlto_build_dir }}'
     target: install
 
-# Generate 'configure' file for xorg-macros
-- name: Generate configure file for xorg-macros
+# Generate 'configure' file for pixman
+- name: Generate 'configure' file for pixman
   shell: |
-    cd '{{ xorg_macros_build_dir }}'
+    cd '{{ pixman_build_dir }}'
     autoreconf -i
+
+# Configure pixman
+- name: Configure pixman
+  shell: |
+    cd '{{ pixman_build_dir }}'
+    ./configure
+
+# Build pixman
+- name: Make pixman
+  make:
+    chdir: '{{ pixman_build_dir }}'
+    target: all
+
+# Install pixman
+- name: Install pixman
+  make:
+    chdir: '{{ pixman_build_dir }}'
+    target: install
+
+# Configure libpciaccess
+- name: Configure libpciaccess
+  shell: |
+    cd '{{ libpciaccess_build_dir }}'
+    ./configure
+  environment:
+    PKG_CONFIG_PATH: '/usr/local/lib/pkgconfig'
+
+# Build libpciaccess
+- name: Build libpciaccess
+  make:
+    chdir: '{{ libpciaccess_build_dir }}'
+    target: all
+
+# Install libpciaccess
+- name: Install libpciaccess
+  make:
+    chdir: '{{ libpciaccess_build_dir }}'
+    target: install
+
+# Use meson to build drm
+- name: Use meson to build drm
+  shell: |
+    cd '{{ drm_build_dir }}'
+    meson builddir/
+
+# Use ninja to install drm
+- name: Use ninja to install drm
+  shell: |
+    cd '{{ drm_build_dir }}'
+    ninja -C builddir/ install
+
+# Configure xtrans
+- name: Configure xtrans
+  shell: |
+    cd '{{ xtrans_build_dir }}'
+    ./configure
+  environment:
+    PKG_CONFIG_PATH: '/usr/local/share/pkgconfig'
+
+# Build xtrans
+- name: Make xtrans
+  make:
+    chdir: '{{ xtrans_build_dir }}'
+    target: all
+
+# Install xtrans
+- name: Install xtrans
+  make:
+    chdir: '{{ xtrans_build_dir }}'
+    target: install
 
 # Configure xorg-macros
 - name: Configure xorg-macros
@@ -350,6 +535,8 @@
   shell: |
     cd '{{ libX11_build_dir }}'
     ./configure
+  environment:
+    PKG_CONFIG_PATH: '/usr/local/share/pkgconfig:/usr/local/lib/pkgconfig'
 
 # Build libX11
 - name: Make libX11
@@ -362,6 +549,20 @@
   make:
     chdir: '{{ libX11_build_dir }}'
     target: install
+
+# Configure xorg-server
+- name: Configure xorg-server
+  shell: |
+    cd '{{ xorg_server_build_dir }}'
+    ./configure
+  environment:
+    PKG_CONFIG_PATH: '{{ pkg_config_path }}'
+
+# Generate 'configure' file for xorg-macros
+- name: Generate configure file for xorg-macros
+  shell: |
+    cd '{{ xorg_macros_build_dir }}'
+    autoreconf -i
 
 # Configure libXext
 - name: Configure libXext
@@ -398,6 +599,149 @@
   make:
     chdir: '{{ xextproto_build_dir }}'
     target: install
+
+# Configure xfixes
+- name: Configure libXfixes
+  shell: |
+    cd '{{ libXfixes_build_dir }}'
+    ./configure
+  environment:
+    PKG_CONFIG_PATH: '{{ pkg_config_path }}'
+
+# Build xfixes
+- name: Make libXfixes
+  make:
+    chdir: '{{ libXfixes_build_dir }}'
+    target: all
+
+# Install xfixes
+- name: Install libXfixes
+  make:
+    chdir: '{{ libXfixes_build_dir }}'
+    target: install
+
+# Configure libxdamage
+- name: Configure libxdamage
+  shell: |
+    cd '{{ xdamage_build_dir }}'
+    ./configure
+  environment:
+    PKG_CONFIG_PATH: '{{ pkg_config_path }}'
+
+# Build libxdamage
+- name: Make libxdamage
+  make:
+    chdir: '{{ xdamage_build_dir }}'
+    target: all
+
+# Install libxdamage
+- name: Install libxdamage
+  make:
+    chdir: '{{ xdamage_build_dir }}'
+    target: install
+
+# Configure xshmfence
+- name: Configure libxshmfence
+  shell: |
+    cd '{{ libxshmfence_build_dir }}'
+    ./configure
+  environment:
+    PKG_CONFIG_PATH: '{{ pkg_config_path }}'
+
+# Build xshmfence
+- name: Make libxshmfence
+  make:
+    chdir: '{{ libxshmfence_build_dir }}'
+    target: all
+
+# Install xshmfence
+- name: Install libxshmfence
+  make:
+    chdir: '{{ libxshmfence_build_dir }}'
+    target: install
+
+# Configure libXxf86vm
+- name: Configure libXxf86vm
+  shell: |
+    cd '{{ libXxf86vm_build_dir }}'
+    ./configure
+  environment:
+    PKG_CONFIG_PATH: '{{ pkg_config_path }}'
+
+# Build libXxf86vm
+- name: Make libXxf86vm
+  make:
+    chdir: '{{ libXxf86vm_build_dir }}'
+    target: all
+
+# Install xshmfence
+- name: Install libXxf86vm
+  make:
+    chdir: '{{ libXxf86vm_build_dir }}'
+    target: install
+
+# Prepare to build mesa
+- name: Create build sub folder for mesa
+  file:
+    state: directory
+    path: '{{ mesa_build_dir }}/build'
+
+# Use meson+ninja to build and install mesa
+- name: For NVIDIA devices only -- use meson to build mesa and ninja to install it
+  shell: |
+    cd '{{ mesa_build_dir }}/build'
+    meson -Dplatforms=x11 -Ddri-drivers=nouveau -Dgallium-drivers=nouveau ..
+    ninja install
+  when: gpu_device == 'nvidia'
+- name: For all other GPU devices -- se meson to build mesa and ninja to install it
+  shell: |
+    cd '{{ mesa_build_dir }}/build'
+    meson ..
+    ninja install
+  when: gpu_device != 'nvidia'
+
+# Build mcpp
+- name: Make mcpp
+  make:
+    chdir: '{{ mcpp_build_dir }}'
+    target: all
+
+# Install mcpp
+- name: Install mcpp
+  make:
+    chdir: '{{ mcpp_build_dir }}'
+    target: install
+
+# Create symbolic link for libmcpp
+- name: Create symbolic link for libmcpp.so since there is no such 'libmcpp.so' file
+  file:
+    state: link
+    src: '/usr/lib64/libmcpp.so.0'
+    dest: '/usr/lib64/libmcpp.so'
+
+# Build LMDB
+- name: Make lmdb
+  make:
+    chdir: '{{ lmdb_build_dir }}/libraries/liblmdb'
+    target: all
+
+# Install LMDB
+- name: Install lmdb
+  make:
+    chdir: '{{ lmdb_build_dir }}/libraries/liblmdb'
+    target: install
+
+# Make ice cpp
+- name: Make ice cpp
+  make:
+    chdir: '{{ ice_build_dir }}/cpp'
+    target: all
+
+# Install ice cpp
+- name: Install ice cpp
+  make:
+    chdir: '{{ ice_build_dir }}/cpp'
+    target install
 
 # Configure libXt
 - name: Configure libXt
@@ -471,19 +815,6 @@
     chdir: '{{ libXrandr_build_dir }}'
     target: install
 
-# Prepare to build mesa
-- name: Create build sub folder for mesa
-  file:
-    state: directory
-    path: '{{ mesa_build_dir }}/build'
-
-# Use meson+ninja to build and install mesa
-- name: Use meson to build mesa and ninja to install it
-  shell: |
-    cd '{{ mesa_build_dir }}/build'
-    meson ..
-    ninja install
-
 # Configure, build, and install libxkbcommon
 - name: Configure, build, and install xkbcommon
   shell: |
@@ -510,17 +841,29 @@
     target: install
 
 # Remove all build dirs
-- name: Remove all build dirs for fop, flex, xorg-macros, xmlto, libXext, xextproto, libXt, libXmu, libXi, libX11, libXrandr, freeglut, mesa, xkbcommon
+- name: Remove existing build dirs for fop, gettext, pixman, libpciaccess, drm, xtrans, flex, xorg-macros, xmlto, libXext, xextproto, libXfixes, xdamage, libxshmfence, libXxf86vm, mcpp, lmdb, ice, libXt, libXmu, libXi, libX11, libXrandr, freeglut, mesa, xkbcommon
   file:
     state: absent
     path: '{{ item }}'
   with_items: 
     - '{{ fop_download_dir }}'
+    - '{{ gettext_build_dir }}'
+    - '{{ pixman_build_dir }}'
+    - '{{ libpciaccess_build_dir }}'
+    - '{{ drm_build_dir }}'
+    - '{{ xtrans_build_dir }}'
     - '{{ flex_build_dir }}'
     - '{{ xorg_macros_build_dir }}'
     - '{{ xmlto_build_dir }}'
     - '{{ libXext_build_dir }}'
     - '{{ xextproto_build_dir }}'
+    - '{{ libXfixes_build_dir }}'
+    - '{{ xdamage_build_dir }}'
+    - '{{ libxshmfence_build_dir }}'
+    - '{{ mcpp_build_dir }}'
+    - '{{ lmdb_build_dir }}'
+    - '{{ ice_build_dir }}'
+    - '{{ libXxf86vm_build_dir }}'
     - '{{ libXt_build_dir }}'
     - '{{ libXmu_build_dir }}'
     - '{{ libX11_build_dir }}'
